--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@formatjs/intl-pluralrules": "^5.4.2",
+    "@mui/material": "^6.4.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/node": "^16.18.125",
     "html-react-parser": "^5.1.0",
-    "i18next": "^23.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "i18next": "^23.16.8",
+    "i18next-icu": "^2.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^13.5.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -46,6 +49,9 @@
     ]
   },
   "devDependencies": {
-    "@crowdin/cli": "^3.15.0"
+    "@crowdin/cli": "^3.15.0",
+    "@types/i18next": "^13.0.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3"
   }
-} 
+}
