--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,6 +1,10 @@
-project_id: "your-project-id"
-api_token: "your-api-token"
+project_id: your-project-id
+api_token: your-api-token
 files:
   - source: /src/i18n/locales/en/**/*
     translation: /src/i18n/locales/%two_letters_code%/**/%original_file_name%
-preserve_hierarchy: true 
+  - source: /src/modules/petshop/locales/en/**/*
+    translation: /src/modules/petshop/locales/%two_letters_code%/**/%original_file_name%
+  - source: /src/modules/account/locales/en/**/*
+    translation: /src/modules/account/locales/%two_letters_code%/**/%original_file_name%
+preserve_hierarchy: 1
